fix overflow

--- a/src/pages/Play/Question.css
+++ b/src/pages/Play/Question.css
@@ -1,9 +1,7 @@
 /* General Styling */
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-body{
-  overflow-y: hidden;
-}
+
 
 .arcade-container {
   display: flex;
